--- a/product_reviews/templates/product_reviews/edit_product_review.html
+++ b/product_reviews/templates/product_reviews/edit_product_review.html
@@ -31,7 +31,7 @@
     <!-- Add Product Review Form -->
     <div class="row">
         <div class="col-12 col-md-6">
-            <form method="POST" action="{% url 'edit_product_review' review.id %}" class="form mb-2"
+            <form method="POST" action="{% url 'edit_product_review' product.id review.id %}" class="form mb-2"
                 enctype="multipart/form-data">
 
                 {% csrf_token %}
