Spell check readme

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -169,7 +169,7 @@
 
 <!-- Product review section -->
 <div class="row">
-    <div class="col-12 col-lg-8 offset-lg-2 text-center">
+    <div class="col-12 col-lg-8 offset-lg-2 text-center mb-5">
 
         <!-- Title and review count -->
         <h2 class="">Reviews({{ product.id|review_count }})</h2>
