--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -31,7 +31,7 @@
 
     <!-- Mobile nav links -->
     <!-- Account -->
-    <li class="list-inline-item dropdown">
+    <li class="list-inline-item dropdown p-0">
         <a class="text-black nav-link d-block d-lg-none" href="#" id="user-options" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
             <div class="text-center">
