--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
   {% block extra_meta %}{% endblock %}
 
   {% block corecss %}
-  <link rel="icon" type="image/png" href="/media/favicon.ico">
+  <link rel="icon" type="image/png" href="{{ MEDIA_URL }}favicon.ico">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.googleapis.com">
