--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -134,7 +134,7 @@
                             </div>
 
                             <!-- Add to bag or go back -->
-                            <div class="col{% if s %}-12 mt-2{% endif %} d-flex">
+                            <div class="col{% if s %}-12 mt-2{% endif %} d-flex pl-0">
                                 <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 mt-5">
                                     <span class="icon">
                                         <i class="fas fa-chevron-left"></i>
