--- a/templates/base.html
+++ b/templates/base.html
@@ -82,7 +82,7 @@
       </div>
 
       <!-- Nav links -->
-      <div class="col-12 col-lg-3 my-auto py-1 py-lg-0">
+      <div class="col-12 col-lg-3 my-auto py-1 py-lg-0 pl-lg-0">
         <ul class="list-inline list-unstyled text-center text-lg-right my-0 pt-2">
 
           <!-- Account -->
@@ -198,7 +198,6 @@
   <script type="text/javascript">
     $('.toast').toast('show');
   </script>
-  <script src="{% static 'js/nav.js' %}"></script>
   {% endblock %}
 
   {% block bagjs %}
