Fix sort selector 'selected' bug

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -51,11 +51,11 @@
                                 Price (high to low)</option>
                             <option value="rating_asc" {% if current_sorting == 'rating' %} selected {% endif %}>
                                 Rating (low to high)</option>
-                            <option value="rating_desc" {% if current_sorting == '-ratingc' %} selected {% endif %}>
+                            <option value="rating_desc" {% if current_sorting == '-rating' %} selected {% endif %}>
                                 Rating (high to low)</option>
                             <option value="name_asc" {% if current_sorting == 'name' %} selected {% endif %}>Name
                                 (A-Z)</option>
-                            <option value="name_desc" {% if current_sorting == '-namec' %} selected {% endif %}>Name
+                            <option value="name_desc" {% if current_sorting == '-name' %} selected {% endif %}>Name
                                 (Z-A)</option>
                             <option value="category_asc" {% if current_sorting == 'category' %} selected {% endif %}>
                                 Category (A-Z)</option>
